# aware

./: .gitignore  LICENSE  Makefile  README.md  __init__.py  __version__.py  cli.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: __init__.py  default_rules.yaml
core/: __init__.py  engine.py  formatters.py  models.py  rules_loader.py
hooks/: __init__.py  install.py
hooks/templates/: __init__.py  pre-commit  pre-push
scanners/: __init__.py  git_diff.py
tests/: __init__.py  conftest.py  test_engine.py
wrappers/: __init__.py  shell_wrap.py
