[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aware-security"
version = "1.0.0"
description = "🧠 Cognitive Awareness for Developers - Intercepta decisões perigosas no desenvolvimento"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Vinícius Lisboa", email = "contato@viniciuslisboa.com.br" }
]
maintainers = [
    { name = "Vinícius Lisboa", email = "contato@viniciuslisboa.com.br" }
]
keywords = [
    "security",
    "development",
    "git-hooks",
    "static-analysis",
    "developer-tools",
    "cognitive-security",
    "pre-commit",
    "sast"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/IamXeoth/aware"
Documentation = "https://github.com/IamXeoth/aware#readme"
Repository = "https://github.com/IamXeoth/aware"
"Bug Tracker" = "https://github.com/IamXeoth/aware/issues"
"Author" = "https://viniciuslisboa.com.br"

[project.scripts]
aware = "aware.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["aware"]

[tool.hatch.build.targets.sdist]
include = [
    "/aware",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# =============================================================================
# Black (Code Formatter)
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

# =============================================================================
# Ruff (Linter)
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py39"

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

# =============================================================================
# MyPy (Type Checker)
# =============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# Pytest (Testing)
# =============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source = ["aware"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]